k8s/kafka/kustomize/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: kafka-ui
  annotations:
    cert-manager.io/cluster-issuer: spnw-intermediate-ca1-issuer
    cert-manager.io/common-name: "kafkaui.vm.world1l.worldl.xpt"
spec:
  ingressClassName: nginx
  rules:
    - host: kafkaui.vm.world1l.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 80
    - host: worldl-kafkaui.worldb.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 80
  tls:
    - hosts:
        - kafkaui.vm.world1l.worldl.xpt
      secretName: kafkaui-cert-secret
